--- a/requirements.txt
+++ b/requirements.txt
@@ -1,5 +1,7 @@
+beautifulsoup4==4.9.1
+django==3.0.6
 numpy
 pandas
-django==3.0.6.
+requests==2.23.0
 selenium==3.141.0
-beautifulsoup4==4.9.1
+transformers==2.10.0
